VPP3-225 fixed up some of the spacing on the site, still need to test out the vertical bar setup

--- a/src/styles/components/attendance-container.scss
+++ b/src/styles/components/attendance-container.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: baseline;
+  justify-content: center;
   width: 100%;
   &__attendance-column-container {
     display: flex;
