--- a/src/styles/components/class-and-attendance-container.scss
+++ b/src/styles/components/class-and-attendance-container.scss
@@ -16,7 +16,7 @@
 
   &--second {
     background-color: $color-light-grey;
-    height: 38%;
-    min-height: 38%;
+    height: 50%;
+    min-height: 50%;
   }
 }
