--- a/src/styles/components/focus-date-cell.scss
+++ b/src/styles/components/focus-date-cell.scss
@@ -2,7 +2,7 @@
   display: flex;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 28px;
+  margin-bottom: 36px;
   width: 100%;
   &--today {
     margin-bottom: 36px;
